tests/baselines/reference/parserSymbolIndexer2.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer2.ts(2,6): error TS1023: An index signature parameter type must be either 'string' or 'number'.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer2.ts (1 errors) ====
    class C {
        [s: symbol]: string;
         ~
!!! error TS1023: An index signature parameter type must be either 'string' or 'number'.
    }